# AsyncFastAPIBoilerplate

./: Dockerfile  README.md  app.py  db.sql  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  models.py
app/api/controllers/: games.py
app/core/services/: twitter.py
source/app/: config.py  container.py  main.py
source/app/api/v1/: __init__.py  games.py  teams.py
source/app/database/: session.py
source/app/database/models/: __init__.py  base.py  game.py  team.py  user.py  user_team.py
source/app/repositories/: abc.py  container.py  mysql.py
source/app/schema/: game.py  team.py  user.py  user_team.py
source/app/services/: container.py  scoreboard.py  twitter.py
source/app/services/crud/: base.py  container.py
templates/: accountCreated.html  backbone.html  index.html  login.html  player_stats.html  records.html  register.html  scores.html  start_game.html  table.html  team_stats.html  user.html
