[tool.poetry]
name = "tweetboard"
version = "0.1.0"
description = "Scoreboard that tweets score"
authors = ["BrianThomasMcGrath <brianmcg@bu.edu>"]
packages = [
    { include = "app", from = "source" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
fastapi-users = "^9.1.0"
fastapi-users-db-sqlalchemy = "^1.1.0"
SQLAlchemy = "^1.4.29"
uvicorn = "^0.16.0"
dependency-injector = "^4.39.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
